--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -64,3 +64,19 @@
     --ring: 224.3 76.3% 48%;
   }
 }
+
+@theme inline {
+  --animate-glow: glow var(--duration) infinite linear;
+  @keyframes glow {
+    0% {
+      background-position: 0% 0%;
+    }
+    50% {
+      background-position: 100% 100%;
+    }
+    to {
+      background-position: 0% 0%;
+    }
+  }
+}
+
